@@ -7,7 +7,8 @@ Devel::NYTProf::Changes - List of significant changes to Devel::NYTProf
 =head2 Changes in Devel::NYTProf 2.09 (svn rXXX)
 
   Fixed report filename generation to remove colons,
-    reported by Adam Kennedy in rt bug #43798.
+    for Windows, reported by Adam Kennedy in rt bug #43798.
+  Fixed report filename generation to remove dots, for VMS.
 
 =head2 Changes in Devel::NYTProf 2.08 (svn r685) 15th Feb 2009
 
